@@ -1,3 +1,8 @@
+2018-01-27  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* tfmload.c, dvips.h: Support new JFM spec (3-byte characters
+	in TYPE > 0).
+
 2017-05-19  Karl Berry  <karl@tug.org>
 
 	* Version 5.997 for TeX Live 2017 release.
